# discord-selfbot-mcp

./: .env.example  .gitignore  FULLAUTO_CONTEXT.md  INSTALL.md  README.md  mcp.example.json  mcp.python.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.codex/: INSTALL.md
.opencode/: INSTALL.md
discord_py_self_mcp/: bot.py  main.py
discord_py_self_mcp/tools/: invites.py  members.py  messages.py  presence.py  profile.py
discord_selfbot_mcp/tools/: __init__.py  channels.py  interactions.py  invites.py  reactions.py  relationships.py  voice.py
src/: index.ts  setup.ts
src/core/: config.ts  logger.ts
src/core/browser/: captcha-solver.ts  index.ts
src/core/errors/: discord-errors.ts  index.ts  mcp-errors.ts
src/core/formatting/: output.ts
src/core/rateLimit/: index.ts  limiter.ts
src/core/resolvers/: ids.ts
src/discord/: client.ts
src/mcp/: index.ts  registry.ts  server.ts
src/tools/channels/: index.ts
src/tools/dms/: index.ts
src/tools/events/: index.ts
src/tools/files/: index.ts
src/tools/guilds/: index.ts
src/tools/interactions/: index.ts
src/tools/invites/: index.ts
src/tools/messages/: index.ts  pins.ts  reactions.ts
src/tools/notifications/: index.ts
src/tools/presence/: index.ts
src/tools/profile/: index.ts
src/tools/relationships/: index.ts
src/tools/slash/: index.ts
src/tools/system/: index.ts
src/tools/threads/: index.ts
src/tools/voice/: index.ts
