[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-py-self-mcp"
version = "0.1.0"
authors = [
  { name="Microck", email="your.email@example.com" },
]
description = "A Discord Selfbot MCP server using discord.py-self"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py-self==2.0.1",
    "mcp",
    "python-dotenv",
    "playwright",
    "audioop-lts; python_version >= '3.13'"
]

[project.scripts]
discord-py-self-mcp = "discord_py_self_mcp.main:main"
discord-py-self-mcp-setup = "discord_py_self_mcp.setup:main"

